--- a/.github/workflows/releasing.yml
+++ b/.github/workflows/releasing.yml
@@ -41,13 +41,15 @@ jobs:
           scripts/set_chart_version.sh "$GITHUB_REF_NAME"
         elif [ "$GITHUB_REF_NAME" != "main" ]; then
           # https://github.com/orgs/community/discussions/26325
-          if [ "$GITHUB_EVENT_NAME" = "pull_request_target" ]; then
+          if [ "$GITHUB_EVENT_NAME" = "pull_request_target" ] || [ "$GITHUB_EVENT_NAME" = "pull_request" ]; then
             actual_pr_head_commit=$(cat $GITHUB_EVENT_PATH | yq --input-format json -r .pull_request.head.sha)
             version=$(yq '.version' charts/matrix-stack/Chart.yaml | sed "s/-dev/-sha$actual_pr_head_commit/")
           else
             version=$(yq '.version' charts/matrix-stack/Chart.yaml | sed "s/-dev/-sha$GITHUB_SHA/")
           fi
           scripts/set_chart_version.sh "$version"
+        else
+          echo "Did not set chart version on event $GITHUB_EVENT_NAME: $GITHUB_REF_TYPE/$GITHUB_REF_NAME"
         fi
 
     - name: Login to GitHub Container Registry
