--- a/charts/matrix-stack/templates/well-known/ingress.yaml
+++ b/charts/matrix-stack/templates/well-known/ingress.yaml
@@ -31,14 +31,14 @@ spec:
               number: 80
 {{- else }}
       - path: /.well-known/matrix
-        pathType: Prefix
+        pathType: {{ include "element-io.ess-library.ingress.kubernetes-nginx-dot-paths-types" (dict "root" $ "context" .ingress.type) }}
         backend:
           service:
             name: "{{ $.Release.Name }}-well-known"
             port:
               number: 80
       - path: /.well-known/element
-        pathType: Prefix
+        pathType: {{ include "element-io.ess-library.ingress.kubernetes-nginx-dot-paths-types" (dict "root" $ "context" .ingress.type) }}
         backend:
           service:
             name: "{{ $.Release.Name }}-well-known"
