--- a/charts/matrix-stack/ci/fragments/well-known-pytest-extras.yaml
+++ b/charts/matrix-stack/ci/fragments/well-known-pytest-extras.yaml
@@ -8,6 +8,9 @@ global:
 # To check that templating works against the ingress
 serverName: "{{ $.Values.global.baseDomain }}"
 
+ingress:
+  type: kubernetes-nginx
+
 wellKnownDelegation:
   ingress:
     tlsSecret: "{{ $.Release.Name }}-well-known-web-tls"
