--- a/charts/matrix-stack/ci/pytest-well-known-values.yaml
+++ b/charts/matrix-stack/ci/pytest-well-known-values.yaml
@@ -13,6 +13,8 @@ global:
 haproxy:
   podSecurityContext:
     runAsGroup: 0
+ingress:
+  type: kubernetes-nginx
 matrixAuthenticationService:
   enabled: false
 # To check that templating works against the ingress
